# speckurs

01_TerminalProject/: Makefile  Makefile.c
03_Text/: ascii_art.txt  randomize.sh
04_Debugging/: Makefile  expected_output1.txt  expected_output2.txt  range.c  test1.gdb  test2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c  test_move.sh
07_Environmental/: Makefile.am  configure.ac  rhasher.c  run.sh
08_I18n/: CMakeLists.txt
08_I18n/locales/ru/LC_MESSAGES/: guess_number.po
08_I18n/src/: main.c
09_PatchDiff/: Makefile  main.c  patch2.c  patch3.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buffer.c  buffer.h
10_LibTesting/tests/: Makefile.am  tests.c
11_Documenting/: Makefile  main.c  roman.c  roman.h
12_InstallPackaging/: Makefile.am  ReadMe.md  autogen.sh  configure.ac
12_InstallPackaging/docs/: Doxyfile
12_InstallPackaging/man/: hello.1
12_InstallPackaging/po/: Makefile.in  en.po  es.po  ru.po
12_InstallPackaging/src/: Makefile.am  hello.cpp  hello.h  hello_test.cpp  main.cpp
